NLP TP/texts/robotics/robotics.stackexchange_0000062264.txt
Q:

XV_laser_drive/Tutorial

I did a upgrade to Indigo so I could get Rviz working properly.  I am trying to install the xv_laser_driver.  I get an error with catkin_make.  This is what I get:
Base path: /home/brent/catkin_ws
Source space: /home/brent/catkin_ws/src
Build space: /home/brent/catkin_ws/build
Devel space: /home/brent/catkin_ws/devel
Install space: /home/brent/catkin_ws/install

Running command: "make cmake_check_build_system" in "/home/brent/catkin_ws/build"

Running command: "make -j2 -l2" in "/home/brent/catkin_ws/build"

[  0%] Built target _beginner_tutorials_generate_messages_check_deps_AddTwoInts
[  0%] Built target beginner_tutorials_generate_messages_check_deps_Num
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[ 16%] [ 25%] Built target rbx1_nav_gencfg
Building CXX object xv_11_laser_driver/CMakeFiles/neato_laser_publisher.dir/src/neato_laser_publisher.cpp.o
[ 41%] Built target beginner_tutorials_generate_messages_lisp
[ 58%] Built target beginner_tutorials_generate_messages_cpp
[ 91%] Built target beginner_tutorials_generate_messages_py
[ 91%] Built target beginner_tutorials_generate_messages
[100%] Building CXX object xv_11_laser_driver/CMakeFiles/neato_laser_publisher.dir/src/xv11_laser.cpp.o
/home/brent/catkin_ws/src/xv_11_laser_driver/src/xv11_laser.cpp: In member function ‘void xv_11_laser_driver::XV11Laser::poll(sensor_msgs::LaserScanstd::allocator<void >::Ptr)’:
/home/brent/catkin_ws/src/xv_11_laser_driver/src/xv11_laser.cpp:109:7: error: ‘rpms’ was not declared in this scope
rpms=0;
^
make[2]: *** [xv_11_laser_driver/CMakeFiles/neato_laser_publisher.dir/src/xv11_laser.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/brent/catkin_ws/src/xv_11_laser_driver/src/neato_laser_publisher.cpp: In function ‘int main(int, char**)’:
/home/brent/catkin_ws/src/xv_11_laser_driver/src/neato_laser_publisher.cpp:71:23: error: ‘class xv_11_laser_driver::XV11Laser’ has no member named ‘rpms’
rpms.data=laser.rpms;
^
make[2]: *** [xv_11_laser_driver/CMakeFiles/neato_laser_publisher.dir/src/neato_laser_publisher.cpp.o] Error 1
make[1]: *** [xv_11_laser_driver/CMakeFiles/neato_laser_publisher.dir/all] Error 2
make: *** [all] Error 2
Invoking "make" failed
I know you guys are probably tired from my on going problem with this tutorial, but I do appreciate your help.

Originally posted by Morpheus on ROS Answers with karma: 111 on 2014-09-01
Post score: 0

A:

No need to comment anything, just declare rpms in xv11_laser.h
gedit ~/catkin_ws/src/xv_11_laser_driver/include/xv_11_laser_driver/xv11_laser.h

Add the following to line 43 after public: then save the file
uint16_t rpms; 

Run catkin_make in your catkin workspace, and you should be all good now :)
cd ~/catkin_ws/
catkin_make
source devel/setup.bash

Tested with a Jeston TK1 running Ubutnu 14.04 & Indigo

Originally posted by pikey with karma: 16 on 2014-09-08
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by Morpheus on 2014-09-15:
Worked perfect.
Thank you!

